src/objects/DC311_Landing_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Icon__c</fullName>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <picklist>
            <picklistValues>
                <fullName>S0031</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>S0276</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0441</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Title__c</fullName>
        <label>Sub Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <label>DC311 Landing Page</label>
    <pluralLabel>DC311 Landing Page</pluralLabel>
</CustomObject>